crates/oxidoc/tests/snapshots/golden_writer__html__table__table-caption.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<table>
<caption>A caption for the table</caption>
<thead>
<tr>
<th>h</th>
</tr>
</thead>
<tbody>
<tr>
<td>v</td>
</tr>
</tbody>
</table>
