crates/oxidoc/tests/snapshots/golden_writer__html__table__table-rowspan.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<table>
<tbody>
<tr>
<td rowspan="2">tall</td>
<td>a</td>
</tr>
<tr>
<td>b</td>
</tr>
</tbody>
</table>
