crates/oxidoc/tests/snapshots/golden_writer__html__table__table-simple.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<table>
<thead>
<tr>
<th>h1</th>
<th>h2</th>
</tr>
</thead>
<tbody>
<tr>
<td>a</td>
<td>b</td>
</tr>
</tbody>
</table>
